--- a/.classpath
+++ b/.classpath
@@ -2,19 +2,19 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="D:/workspace/CollectStockInfo/depends/jsoup-1.8.3.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/CollectStockInfo/depends/jxl.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/CollectStockInfo/depends/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/CollectStockInfo/depends/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/CollectStockInfo/depends/fluent-hc-4.5.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/CollectStockInfo/depends/httpclient-4.5.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/CollectStockInfo/depends/httpclient-cache-4.5.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/CollectStockInfo/depends/httpclient-win-4.5.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/CollectStockInfo/depends/httpcore-4.4.1.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/CollectStockInfo/depends/httpmime-4.5.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/CollectStockInfo/depends/java-json.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/CollectStockInfo/depends/jna-4.1.0.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/CollectStockInfo/depends/jna-platform-4.1.0.jar"/>
-	<classpathentry kind="lib" path="D:/workspace/CollectStockInfo/depends/servlet-api.jar"/>
+	<classpathentry kind="lib" path="depends/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="depends/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="depends/fluent-hc-4.5.jar"/>
+	<classpathentry kind="lib" path="depends/httpclient-4.5.jar"/>
+	<classpathentry kind="lib" path="depends/httpclient-cache-4.5.jar"/>
+	<classpathentry kind="lib" path="depends/httpclient-win-4.5.jar"/>
+	<classpathentry kind="lib" path="depends/httpcore-4.4.1.jar"/>
+	<classpathentry kind="lib" path="depends/httpmime-4.5.jar"/>
+	<classpathentry kind="lib" path="depends/java-json.jar"/>
+	<classpathentry kind="lib" path="depends/jna-4.1.0.jar"/>
+	<classpathentry kind="lib" path="depends/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="depends/jsoup-1.8.3.jar"/>
+	<classpathentry kind="lib" path="depends/jxl.jar"/>
+	<classpathentry kind="lib" path="depends/servlet-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
